--- a/package.json
+++ b/package.json
@@ -1,33 +1,24 @@
 {
   "name": "eventstorm",
-  "version": "0.0.0",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check build-only",
-    "deploy": "gh-pages -d dist",
+    "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "vue": "^3.2.47"
+    "bootstrap": "^5.3.3",
+    "vue": "^3.5.13"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.4",
-    "@types/node": "^18.13.0",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.0",
-    "@vue/tsconfig": "^0.1.3",
-    "eslint": "^8.34.0",
-    "eslint-plugin-vue": "^9.3.0",
-    "gh-pages": "^5.0.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.4",
-    "typescript": "~5.0.2",
-    "vite": "^4.0.0",
-    "vue-tsc": "^1.0.12"
+    "@types/bootstrap": "^5.2.10",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "gh-pages": "^6.2.0",
+    "typescript": "~5.6.2",
+    "vite": "^6.0.1",
+    "vue-tsc": "^2.1.10"
   }
 }
